<resources>
    <string name="app_name">RAWG</string>
    <string name="title_activity_home">Home</string>

    <!-- bottom nav menu title -->
    <string name="title_home">Home</string>
    <string name="title_games">Games</string>
    <string name="title_browse">Browse</string>
    <string name="title_profile">Profile</string>
    <string name="title_details">Details</string>
    <string name="title_screenshots">Screenshots: </string>
    <string name="title_tba">TBA: </string>
    <string name="title_description">Description: </string>
    <string name="title_reddit_name">Reddit Name: </string>
    <string name="title_reddit_description">Reddit description:</string>


</resources>